Fix dash overflow

--- a/src/components/pages/Dashboard/Dashboard.module.css
+++ b/src/components/pages/Dashboard/Dashboard.module.css
@@ -307,6 +307,9 @@
 }
 
 @media only screen and (max-width: 500px) { 
+    body {
+        overflow: visible!important;
+    }
     .dashboard_search {
         display: none;
     }
